tests/negative/neg_pr1116_nominal_cross_family.safe
package neg_pr1116_nominal_cross_family

   type user_id is new integer (0 to 1000)
   type group_id is new integer (0 to 1000)

   user : user_id = 42
   group : group_id = user
